--- a/build.xml
+++ b/build.xml
@@ -1,15 +1,17 @@
 <project name="Lucterios2" default="all" basedir=".">
 	<property name="project.name" value="lucterios" />
 	<property environment="env" />
-	<property name="p12certificatpath" value="/opt/sign/authenticode.spc" />
+	<property name="certificatpath" value="/opt/sign/signCertSDL.pem" />
+	<property name="privatekeypath" value="/opt/sign/privateKey.pem" />
 	
 	<available file="/usr/bin/wine" property="wine.present" />
 	<available file="/usr/bin/hdiutil" property="mac.present" />
 	<available file="/usr/bin/genisoimage" property="pseudomac.present" />
 	<condition property="sign.present">
 		<and>
-		    <available file="/usr/bin/signcode"/>
-		    <available file="${p12certificatpath}"/>
+		    <available file="/usr/local/bin/osslsigncode"/>
+		    <available file="${certificatpath}"/>
+		    <available file="${privatekeypath}"/>
 		</and>
 	</condition>
 
@@ -79,11 +81,9 @@
 	</target>
 	
 	<target name="winsign" if="sign.present">
-		<copy file="bin/${lct_name}_setup.exe" tofile="bin/${lct_name}_setup-signed.exe" />
-		<exec executable="signcode" dir="${basedir}">
-			<arg line="-spc ${p12certificatpath} -a sha1 -$ commercial -n Lucterios -i 'http://www.Lucterios.org' -t http://timestamp.verisign.com/scripts/timstamp.dll -tr 10 bin/${lct_name}_setup-signed.exe"/>
+		<exec executable="osslsigncode" dir="${basedir}">
+			<arg line="sign -certs ${certificatpath} -key ${privatekeypath} -i 'http://www.sd-libre.fr' -n '${lct_name}' bin/${lct_name}_setup.exe bin/${lct_name}_setup-signed.exe"/>
 		</exec>
-		<delete file="${basedir}/bin/${lct_name}_setup-signed.exe.bak" />
 	</target>
 
 	<target name="nsis" if="wine.present">
