--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,11 @@ setup:
     - git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.sleto.fr/lucterios2/lucterios lct-core
     - ./lct-core/utils/prep_env.sh debian
     - ./lct-core/utils/prep_env.sh ant
-    - apt-get install -y libopenjp2-tools rpm winehq-stable
+    - apt install -y libopenjp2-tools rpm software-properties-common
+    - wget -qO- https://dl.winehq.org/wine-builds/winehq.key | apt-key add -
+    - add-apt-repository "deb https://dl.winehq.org/wine-builds/debian/ $(lsb_release -c -s) main"
+    - apt-get update
+    - apt-get install -y winehq-stable
   script:
     - ant 
   artifacts:
