--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ setup:
     - apt-get update
     - apt-get install -y --install-recommends winehq-stable
     - curl -L  https://sourceforge.net/projects/nsis/files/NSIS%203/3.08/nsis-3.08-setup.exe > nsis-3.08-setup.exe
-    - wine nsis-3.08-setup.exe /S
+    - DISPLAY=':0.0' wine nsis-3.08-setup.exe /S
   script:
     - ant 
   artifacts:
