CI: install xvfb (xwindows)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,7 @@ setup:
     - ./lct-core/utils/prep_env.sh debian
     - ./lct-core/utils/prep_env.sh ant
     - apt install -y libopenjp2-tools rpm software-properties-common
+    - apt-get install -y x11vnc xvfb fluxbox
     - wget -qO- https://dl.winehq.org/wine-builds/winehq.key | apt-key add -
     - add-apt-repository "deb https://dl.winehq.org/wine-builds/debian/ $(lsb_release -c -s) main"
     - dpkg --add-architecture i386
