--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ setup_ant:
    LCT_PACKAGES: lucterios lucterios-standard lucterios-contacts lucterios-documents diacamma-asso diacamma-syndic diacamma-financial
   before_script:
     - apt-get update
-    - apt-get install -y git libopenjp2-tools rpm software-properties-common
+    - apt-get install -y git libopenjp2-tools rpm software-properties-common genisoimage
     - git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.sleto.fr/lucterios2/lucterios lct-core
     - ./lct-core/utils/prep_env.sh debian
     - ./lct-core/utils/prep_env.sh ant
@@ -30,19 +30,12 @@ setup_win:
   services:
     - docker:dind
   script:
-    - mkdir tmp
-    - cp License.txt tmp
-    - cp setup.iss tmp/setup.iss
-    - cp install.ps1 tmp/install.ps1
-    - cp PythonWin32.zip tmp/
-    - build_tstmp=$(git log -1 --format=%at)
-    - build_num=$(python -c "import datetime;print(datetime.datetime.fromtimestamp(int('${build_tstmp}')).strftime('%y%m%d%H'))")
-    - sed -i "s|@@NAME@@|${LCT_NAME}|g" tmp/setup.iss
-    - sed -i "s|@@BUILD@@|${build_num}|g" tmp/setup.iss
-    - sed -i "s|@@NAME@@|${LCT_NAME}|g" tmp/install.ps1
-    - sed -i "s|@@BUILD@@|${build_num}|g" tmp/install.ps1
-    - sed -i "s|@@PACKAGE@@|${LCT_PACKAGES}|g" tmp/install.ps1
-    - sed -i "s|@@PIPOPTION@@||g" tmp/install.ps1   
+    - apt-get update
+    - apt-get install -y git
+    - git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.sleto.fr/lucterios2/lucterios lct-core
+    - ./lct-core/utils/prep_env.sh ant
+    - export SETUP_NAME=setup.iss
+    - ant commun_win
     - docker run --rm -v "$PWD:/work" amake/innosetup "tmp/setup.iss"
     - cp tmp/${LCT_NAME}_setup.exe ${LCT_NAME}_setup.exe
   artifacts:
