--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,7 +38,7 @@ setup_win:
     - cp install.ps1 tmp/install.ps1
     - cp PythonWin32.zip tmp/
     - build_tstmp=$(git log -1 --format=%at)
-    - build_num=$(python -c "import datetime;print(datetime.datetime.fromtimestamp(int('${build_tstmp}')).strftime('%y%m%d%H'))")
+    - build_num=$(python3 -c "import datetime;print(datetime.datetime.fromtimestamp(int('${build_tstmp}')).strftime('%y%m%d%H'))")
     - sed -i "s|@@NAME@@|${LCT_NAME}|g" tmp/setup.iss
     - sed -i "s|@@BUILD@@|${build_num}|g" tmp/setup.iss
     - sed -i "s|@@NAME@@|${LCT_NAME}|g" tmp/install.ps1
