--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,7 +47,8 @@ setup_win:
     - sed -i "s|@@BUILD@@|${build_num}|g" tmp/install.ps1
     - sed -i "s|@@PACKAGE@@|${LCT_PACKAGES}|g" tmp/install.ps1
     - sed -i "s|@@PIPOPTION@@||g" tmp/install.ps1
-    - docker run --rm -v "$PWD:/work" amake/innosetup "tmp/setup.iss"
+    - cat tmp/setup.iss
+    - docker run --rm -v "$PWD/tmp:/work" amake/innosetup setup.iss
     - cp tmp/${LCT_NAME}_setup.exe ${LCT_NAME}_setup.exe
   artifacts:
     paths:  
