--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,12 +33,12 @@ setup_win:
     - docker:dind
   script:
     - apk update
-    - apk add --update python3 git
+    - apk add --update python3 git zip unzip
     - mkdir tmp
     - cp License.txt tmp
     - cp setup.iss tmp/setup.iss
     - cp install.ps1 tmp/install.ps1
-    - cp PythonWin32.zip tmp/
+    - uzip PythonWin32.zip -d tmp/
     - build_tstmp=$(git log -1 --format=%at)
     - build_num=$(python3 -c "import datetime;print(datetime.datetime.fromtimestamp(int('${build_tstmp}')).strftime('%y%m%d%H'))")
     - sed -i "s|@@NAME@@|${LCT_NAME}|g" tmp/setup.iss
