--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,7 +48,7 @@ setup_win:
     - sed -i "s|@@PACKAGE@@|${LCT_PACKAGES}|g" tmp/install.ps1
     - sed -i "s|@@PIPOPTION@@||g" tmp/install.ps1
     - cat tmp/setup.iss
-    - docker run --rm -v "$PWD/tmp:/work" amake/innosetup setup.iss
+    - docker run --rm -i -v "$PWD/tmp:/work" amake/innosetup setup.iss
     - cp tmp/${LCT_NAME}_setup.exe ${LCT_NAME}_setup.exe
   artifacts:
     paths:  
