--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,7 +35,7 @@ setup_win:
     - apk update
     - apk add --update python3 git zip unzip
     - mkdir tmp
-    - cp License.txt tmp
+    - cp License.txt tmp/License.txt
     - cp setup.iss tmp/setup.iss
     - cp install.ps1 tmp/install.ps1
     - unzip PythonWin32.zip -d tmp/
@@ -48,7 +48,7 @@ setup_win:
     - sed -i "s|@@PACKAGE@@|${LCT_PACKAGES}|g" tmp/install.ps1
     - sed -i "s|@@PIPOPTION@@||g" tmp/install.ps1
     - cat tmp/setup.iss
-    - docker run --rm -i -v "$PWD/tmp:/work" amake/innosetup setup.iss
+    - docker run --rm -v "$PWD/tmp:/work" amake/innosetup setup.iss 2>&1
     - cp tmp/${LCT_NAME}_setup.exe ${LCT_NAME}_setup.exe
   artifacts:
     paths:  
