--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,7 +47,7 @@ setup_win:
     - sed -i "s|@@BUILD@@|${build_num}|g" tmp/install.ps1
     - sed -i "s|@@PACKAGE@@|${LCT_PACKAGES}|g" tmp/install.ps1
     - sed -i "s|@@PIPOPTION@@||g" tmp/install.ps1
-    - cat tmp/setup.iss
+    - ls -l tmp/
     - docker run --rm -v "$PWD/tmp:/work" amake/innosetup setup.iss 2>&1
     - cp tmp/${LCT_NAME}_setup.exe ${LCT_NAME}_setup.exe
   artifacts:
