--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,7 +54,7 @@ deploy:
   script:
    - apt-get update
    - apt-get install -y curl
-   - mkdir bin
+   - mkdir -p bin
    - |
       curl --output bin/Diacamma_setup.dmg --header "PRIVATE-TOKEN: ${GITLAB_TOKEN}" https://gitlab.sleto.fr/api/v4/projects/5/jobs/artifacts/master/raw/bin/Diacamma_setup.dmg?job=setup_ant
    - |
